syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.requests.push";
option java_multiple_files = true;

package requests;

message SetupPushRequest {
}
