syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.responses.push";
option java_multiple_files = true;

package responses;

message SetupPushResponse {
}
